# laszip-python

./: .gitignore  CMakeLists.txt  Changelog.md  License.txt  Readme.md  Releasing.md  pyproject.toml  setup.py
.github/: environment.yml
.github/workflows/: build.yml
cmake/: FindLASzip.cmake  PythonEnvHelper.cmake
scripts/: build-wheels-linux.sh  delocate-wheel.sh
src/: lasunzipper.cpp  lasunzipper.h  laszip.cpp  laszip_error.h  laszipper.cpp  laszipper.h  laszipy.cpp  python_istreambuf.h  python_ostreambuf.h
src/laszip/: __init__.py
