[build-system]
requires = [
    "scikit-build-core>=0.1.5",
    "cmake>=3.20",
    "ninja",
    "pybind11>=2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "laszip"
version = "0.2.0"
description = "Bindings for LASzip made with pybind11"
readme = "Readme.md"
authors = [
    { name = "Thomas Montaigu", email = "thomas.montaigu@laposte.net" }
]
requires-python = ">= 3.7"