[build-system]
requires = [
    "scikit-build-core>=0.9",
    "pybind11>=2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "laszip"
version = "0.2.3"
description = "Bindings for LASzip made with pybind11"
readme = "Readme.md"
authors = [
    { name = "Thomas Montaigu", email = "thomas.montaigu@laposte.net" }
]
license = {file = "License.txt"}
requires-python = ">= 3.7"

[project.urls]
repository = "https://github.com/tmontaigu/laszip-python"

